<resources>
    <string name="app_name">Utilità Gamepad</string>
    <string name="send">Inviare</string>
    <string name="not_connected">Non sei connesso a un dispositivo</string>
    <string name="bt_not_enabled_leaving">Bluetooth non è stato abilitato. Lasciando la chat Bluetooth.</string>
    <string name="title_connecting">collegamento...</string>
    <string name="title_connected_to">collegato: </string>
    <string name="title_not_connected">non collegata</string>
    <string name="scanning">scansione per dispositivi...</string>
    <string name="select_device">seleziona un dispositivo da connettere</string>
    <string name="none_paired">Nessun dispositivo è stato abbinato</string>
    <string name="none_found">Nessun dispositivo trovato</string>
    <string name="title_paired_devices">Dispositivi accoppiati</string>
    <string name="title_other_devices">Altri dispositivi disponibili</string>
    <string name="button_scan">Cerca dispositivi</string>
    <string name="connect">Collegare un dispositivo</string>
    <string name="discoverable">Rendilo visibile</string>
    <string name="note_str">stampa &quot;Menu&quot; per impostare il formato dei dati</string>
    <string name="hello_world">Ciao mondo!</string>
    <string name="menu_settings">impostazioni</string>
    <string name="inno_firmware_download">Download del firmware</string>
    <string name="inno_gamepad_update">Accessori TIMgames</string>
    <string name="gamepad_one">"Gamepad "</string>
    <string name="gamepad_two">Gamepad 2</string>
    <string name="dongle">Nano ricevitore</string>
    <string name="gampad_unconnected">Disconnesso,accendere li dispositivo</string>
    <string name="Upgrade_All">Aggiorna gli accessori</string>
    <string name="guidedstep_first_title">Primo passo guidato</string>
    <string name="guidedstep_first_description">Primo passo della sequenza guidata</string>
    <string name="guidedstep_first_breadcrumb">Passi guidati: 1</string>
    <string name="guidedstep_continue">Continua</string>
    <string name="guidedstep_letsdoit">Facciamolo</string>
    <string name="guidedstep_nevermind">Non importa</string>
    <string name="guidedstep_cancel">Annulla</string>
    <string name="no_target_device">Dispositivo di destinazione non connesso, si prega di collegare il gamepad in un primo momento!</string>
    <string name="not_support_bt">Questo dispositivo non supporta BlueTooth</string>
    <string name="select_upgrade_file">Selezionare il file del firmware per l\'aggiornamento del game pad</string>
    <string name="enable_imu">Abilita IMU</string>
    <string name="disable_imu">Disabilita IMU</string>
    <string name="title_gamepad_advanced">opzioni avanzate gamepad</string>
    <string name="gamepads">Gamepads</string>
    <string name="Calibration">Calibrazione</string>
    <string name="menu_gamepad">Dettagli</string>
    <string name="menu_imu">Sensori</string>
    <string name="menu_about">Versione</string>
    <string name="new_firmware">Premi qui per ottenere una nuova versione.</string>
    <string name="battery">Batteria</string>
    <string name="on">acceso</string>
    <string name="off">spento</string>
    <string name="firmware">Firmware</string>
    <string name="latest_firmware">Ultimo firmware</string>
    <string name="verision">versione</string>
    <string name="imu_sensitivity">Sensibilità</string>
    <string name="current_version">versione corrente</string>
    <string name="latest_update">versione aggiornata</string>
    <string name="unknown">ignoto</string>
    <string name="updated">aggiornato</string>
    <string name="online_status">Stato</string>
    <string name="gamepad_online">"in linea"</string>
    <string name="gamepad_offline">"disconnesso"</string>
    <string name="upgrade_title">Progresso dell\'aggiornamento del Gamepad</string>
    <string name="upgrade_info">" "</string>
    <string name="upgrade_button_done">Fatto</string>
    <string name="upgrade_ing">Aggiornamento in corso, non spegnere il decoder.</string>
    <string name="upgrade_download">Download del firmware ......</string>
    <string name="upgrade_flash">Installazione dell’aggiornamento…</string>
    <string name="upgrade_done">Aggiornamento del gamepad Bluetooth fatto. Premi il pulsante \ "Fatto \" per continuare.</string>
    <string name="upgrade_success">Successo!</string>
    <string name="upgrade_failure">mancato!</string>
    <string name="no_need_update">" è l'ultima versione"</string>
    <string name="toast_upgrade_success">"Installazione completata"</string>
    <string name="toast_upgrade_failed">"Aggiornamento non riuscito"</string>
    <string name="gamepad_v2">TIM Gamepad v2</string>
    <string name="gamepad_v1">TIM Gamepad v1</string>
    <string name="gamepad_v2_description">hai questo gamepad se è connesso al TIM Box\ntramite Bluetooth.</string>
    <string name="gamepad_v1_description">hai questo gamepad se è connesso al TIM Box\ntramite chiavetta USB nano receiver.</string>
    <string name="imu_description">I giochi TIMGAMES sono progettati per funzionare al meglio\ncon le impostazioni base dei sensori.\n\nPuoi attivare la calibrazione del gamepad e modificare la sensibilità dei\nsensori con un valore compreso tra 0.01 (poco sensibile) e 2 (molto sensibile)\nin base al tuo stile di gioco.</string>
    <string name="lastupdate">19/09/2018</string>
    <string name="app_version">1.0</string>
    <string name="title_gamepad">Dettagli gamepad</string>
    <string name="no_gamepad_connected">Non è collegato nessun gamepad</string>
    <string name="lastest_fw_version">" Ultima versione: "</string>
    <string name="upgrading_gamepad_disconnected">L\'handle da aggiornare è stato disconnesso, Per favore, smetti e riprova</string>
    <string name="upgrading_gamepad_failed">Aggiornamento fallito, Per favore, smetti e riprova</string>
    <string name="upgrading_connection_failed">Si è verificato un errore durante la comunicazione con i dati del gamepad. Reimposta il gamepad e riprova.</string>
    <string name="upgrading_connection_timeout">La richiesta di aggiornamento è scaduta, riprova più tardi.</string>
    <string name="dailog_tips">"Nuovo aggiornamento per il sensore di movimento del TIM Gamepad.\nL’aggiornamento scollegherà il TIM Gamepad dal TIM Box.\nPer procedere premere AGGIORNA."</string>
    <string name="utility_service_restarting">"Connecting&#8230;"</string>
    <string name="gamepad_service_running">The TIM Gamepad service is running</string>
    <string name="no_gamepad">Nessun gamepad</string>
    <string name="gamepad_calibration_first">Per annullare, premere (B) o (&lt;) pulsanti.</string>
    <string name="gamepad_calibration_wait">Calibrazione in corso, non muovere il gamepad.</string>
    <string name="gamepad_calibration_end">Premere (B) o Back (&lt;)</string>
    <string name="cancel">CANCELLA</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="calibration_ready">Posiziona il game pad su una superficie piana prima di iniziare.\nNon toccare il gamepad fino alla fine della calibrazione.\nQuando sei pronto, premi \"SI\".\nPremere \"CANCELLA\" per annullare.</string>
    <string name="calibration_completed">Calibrazione completata</string>
    <string name="calibration_cancelled">Calibrazione annullata</string>
    <string name="event_bluetooth_connected" translatable="false">BlueTooth_Connected</string>
    <string name="log_setup_successfully" translatable="false">Device (%s) setup successfully</string>
    <string name="log_setup_failed" translatable="false">Device (%s) setup failed</string>
    <string name="log_wait_for_connection_ready" translatable="false">Waiting for the connection ready (%d) for %s</string>
    <string name="log_hid_device_disconnected" translatable="false">HID device STATE_DISCONNECTED: %s</string>
    <string name="log_hid_device_connected" translatable="false">HID device STATE_CONNECTED: %s</string>
    <string name="log_device_intent_to_be_upgraded" translatable="false">Device %s: intent to be upgraded</string>
    <string name="log_waiting_imu_driver_ready" translatable="false">Waiting for the IMU driver ready...</string>
    <string name="logw_create_notification" translatable="false">Warning: create notification</string>
    <string name="log_running_api" translatable="false">Service running on API: %d</string>
    <string name="log_sensor_sensitivity" translatable="false">Sensor default sensitivity: %s</string>
    <string name="desc_v2_notification" translatable="false">TIM Gamepad v2 notification</string>
    <string name="loge_socket_driver_not_ready" translatable="false">[Socket]Driver not ready, Use default sensitivity</string>
    <string name="loge_binder_driver_not_ready" translatable="false">[Binder]Driver not ready, Use default sensitivity</string>
    <string name="log_exited_FotaMainActivity" translatable="false">Exited FotaMainActivity</string>
    <string name="key_calibration" translatable="false">calibration</string>
    <string name="log_new_gamepad" translatable="false">New game pad added</string>
    <string name="log_gamepad_existed" translatable="false">GamePad %s/%s/%s existed!</string>
    <string name="log_not_valid_tim_gamepad" translatable="false">Not valid tim game pad, Abort</string>
    <string name="log_devicemanager_initialize" translatable="false">DeviceManager Initialize</string>
    <string name="log_enable_imu_gamepad_address" translatable="false">Enable imu for game pad: %s</string>
    <string name="log_not_the_default_imu_device" translatable="false">Not the default imu device, Ignore: %s</string>
    <string name="log_updatefabric_firmwareversion" translatable="false">newFirmwareVersion : %s； version : %s</string>
    <string name="log_target_device_attached_isconnect" translatable="false">Target device attached : %s isBluetoothConnected %s</string>
    <string name="log_start_reconnect_bluetooth" translatable="false">start reconnect BlueTooth : %s name : %s</string>
    <string name="log_target_device_connected" translatable="false">Target device connected: %s</string>
    <string name="log_device_found_not_connected" translatable="false">Device found but not connected.</string>
    <string name="log_device_not_online_skip" translatable="false">Device not online, Skip</string>
    <string name="log_upgrade_device_has_disconnected" translatable="false">The upgrading device has disconnected, abort!</string>
    <string name="log_target_gamepad_disconnected" translatable="false">Target gamepad%s(%s) disconnected, So abort......</string>
    <string name="log_not_the_target_device" translatable="false">Not the target device, go on: %s(%s)</string>
    <string name="log_target_device_found_counts" translatable="false">Target device found, Total=%d</string>
    <string name="log_do_recovery" translatable="false">Do recovery</string>
    <string name="log_device_unpaired_from_user" translatable="false">Device unpaired from user, Ignore</string>
    <string name="log_enable_imu_actually" translatable="false">Enable the IMU actually</string>
    <string name="log_enable_imu_hid_actually" translatable="false">Enable the HID based IMU actually</string>
    <string name="log_disable_none_predefined_device" translatable="false">Disable none predefined device\'s IMU</string>
    <string name="log_cancel_sensor_calibration" translatable="false">Cancel Sensor Calibration</string>
    <string name="log_start_upgrade_process" translatable="false">Start upgrade process</string>
    <string name="log_data_finished" translatable="false">Data finished</string>
    <string name="log_spp_connection_exception" translatable="false">SPP connection exception: %s</string>
    <string name="log_start_calibration" translatable="false">Start Calibration</string>
    <string name="log_end_calibration" translatable="false">Ended Sensor Calibration</string>
</resources>