<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="start"
    android:orientation="vertical">

    <TextView
        android:id="@+id/upgrade_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/upgrade_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/upgrade_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/upgrade_info"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/write" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/upgrade_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upgrade_success"
        android:textSize="15sp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp" />

    <ProgressBar
        android:id="@+id/upgrade_progressbar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:progress="0" />

    <Button
        android:id="@+id/upgrade_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upgrade_button_done" />

</LinearLayout>